k8s/api-gateway-external/api-gateway-external-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api-gateway-external
  namespace: mobile-apps
  generation: 1223
  labels:
    app: api-gateway-external
    app.kubernetes.io/managed-by: Helm
  annotations:
    deployment.kubernetes.io/revision: '42'
    helm.sh/chart: am-chart-0.1.0
    meta.helm.sh/release-name: api-gateway-external
    meta.helm.sh/release-namespace: mobile-apps
spec:
  replicas: 8
  selector:
    matchLabels:
      app: api-gateway-external
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api-gateway-external
        app.kubernetes.io/instance: api-gateway-external
        version: 1.0.43
      annotations:
        sidecar.istio.io/bootstrapOverride: envoy-custom-bootstrap-config
        sidecar.istio.io/proxyMemoryLimit: 1024Mi
        prometheus.io/port: '8080'
        prometheus.io/path: /actuator/prometheus
        maxMsgLogLength: '8192'
        sidecar.istio.io/proxyCPU: 400m
        sidecar.istio.io/proxyMemory: 512Mi
        prometheus.io/scrape: 'true'
        logCollectorSystemLabel: mobile
    spec:
      restartPolicy: Always
      serviceAccountName: default
      schedulerName: default-scheduler
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/internal-gateway
                    operator: Exists
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - api-gateway-external
                topologyKey: datacenter
      terminationGracePeriodSeconds: 30
      dnsConfig:
        options:
          - name: ndots
            value: '2'
      securityContext:
        runAsUser: 100000
        runAsGroup: 200000
        fsGroup: 300000
      containers:
        - resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 400m
              memory: 2Gi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - '-c'
                  - sleep 5
          name: api-gateway-external
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          volumeMounts:
            - name: custom-bootstrap-volume
              mountPath: /etc/istio/custom-bootstrap
            - name: logback
              mountPath: /var/run
            - name: cacerts
              mountPath: /var/run/secrets/java.io
            - name: tmpfs
              mountPath: /tmp
          terminationMessagePolicy: File
          image: 'eco.binary.bank.ru/click-api-gateway:1.0.43'
      serviceAccount: default
      volumes:
        - name: logback
          configMap:
            name: logback-config-2.0.15
            defaultMode: 420
        - name: custom-bootstrap-volume
          configMap:
            name: envoy-custom-bootstrap-config
            defaultMode: 420
        - name: cacerts
          secret:
            secretName: cacerts
            defaultMode: 420
        - name: tmpfs
          emptyDir: {}
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
